# reverify

./: .gitignore  LICENSE  README.md  pyproject.toml  reverify.py
.github/workflows/: ci.yml
tests/: test_reverify.py
