[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reverify"
version = "0.1.0"
description = "Pure python Ethereum contract source code verification tool"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "mab.xyz", email = "hello@mab.xyz"},
]
keywords = ["ethereum", "blockchain", "verification", "solidity", "web3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.25.0",
    "py-solc-x>=2.0.0",
    "evmdasm>=0.1.12",
    "cbor2>=5.4.0",
    "keyring>=23.0.0",
]

[project.urls]
Homepage = "https://github.com/mab-xyz/reverify"
Repository = "https://github.com/mab-xyz/reverify"
Issues = "https://github.com/mab-xyz/reverify/issues"

[project.scripts]
reverify = "reverify:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["reverify*"]

[tool.setuptools.py-modules]
reverify = "reverify"